--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -1,2 +1,20 @@
-h1 Welcome#index
-p Find me in app/views/welcome/index.html.erb
+.container-fluid.hero
+  .container
+    .row
+      .col-sm-12
+        .navbar.navbar-default
+          .container-fluid
+            .navbar-header
+              a.navbar-brand href="#" Sound City Bible Church
+            ul.nav.navbar-nav
+              li
+                a href="#services" Services
+              li
+                a href="#give" Give
+              li
+                a href="#contact" Contact
+      .col-sm-12
+        h1 Jesus walked away from the grave
+      .col-sm-6 
+        p Sartorial bespoke iPhone food truck, mixtape jean shorts try-hard meh. Selfies brunch ugh chambray, jean shorts literally sustainable messenger bag slow-carb XOXO locavore Wes Anderson skateboard meh readymade. Health goth blog post-ironic ennui cold-pressed selvage. Paleo salvia literally kale chips. Small batch butcher High Life before they sold out Williamsburg tattooed Shoreditch. Fanny pack forage church-key, Tumblr Shoreditch meggings Williamsburg fap chillwave hella readymade fashion axe. Fanny pack hashtag occupy, food truck Intelligentsia pork belly single-origin coffee readymade normcore Helvetica Wes Anderson cliche.
+
