--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -1,4 +1,4 @@
-.container-fluid.hero
+.container-fluid#hero
   .container
     .row
       .col-sm-12
@@ -13,8 +13,39 @@
                 a href="#give" Give
               li
                 a href="#contact" Contact
-      .col-sm-12
-        h1 Jesus walked away from the grave
-      .col-sm-6 
-        p Sartorial bespoke iPhone food truck, mixtape jean shorts try-hard meh. Selfies brunch ugh chambray, jean shorts literally sustainable messenger bag slow-carb XOXO locavore Wes Anderson skateboard meh readymade. Health goth blog post-ironic ennui cold-pressed selvage. Paleo salvia literally kale chips. Small batch butcher High Life before they sold out Williamsburg tattooed Shoreditch. Fanny pack forage church-key, Tumblr Shoreditch meggings Williamsburg fap chillwave hella readymade fashion axe. Fanny pack hashtag occupy, food truck Intelligentsia pork belly single-origin coffee readymade normcore Helvetica Wes Anderson cliche.
+      .col-md-12
+        h1.col-md-6 
+          | Jesus 
+          br 
+          | walked away 
+          br 
+          | from the 
+          br 
+          | grave
+      .col-md-6 
+        p This is the reason we exist. This one fact reveals so much about the God who loves us so much he could not leave us to a life of misery. Instead, in Jesus we find true joy in a broken world. We want to invite you to experience that.
 
+.container-fluid#services
+  .container
+    .row
+      .col-md-6
+        .map
+      .col-md-6
+        h3 Service Times
+
+.container-fluid#give
+  .container
+    .row
+      .col-md-12
+        h1.centered Giving
+      .col-md-6.col-md-offset-3
+        p.slab.small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+
+.container-fluid#contact
+  .container
+    .row
+      .col-md-6
+        h3.centered Contact
+      .col-md-6
+        h3 Sound City Bible Church Online Community
+        p.slab.small Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
