updates to hero

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -165,7 +165,7 @@ h5 {
 	background-image: url('jwaftg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: center center;
+	background-position: top center;
 }
 
 #services {
